fix vertical tabs on mobile, remove class for last child in tables due to inconsistancy

--- a/css/material_admin.css
+++ b/css/material_admin.css
@@ -3063,7 +3063,7 @@ input[type=range] + .thumb {
       margin-left: auto;
       left: auto;
       right: auto; }
-    .row .col.s12, .row .vertical-tab-wrapper ul.s12.vertical-tabs__menu, .vertical-tab-wrapper .row ul.s12.vertical-tabs__menu, .row .vertical-tab-wrapper .s12.vertical-tabs__panes, .vertical-tab-wrapper .row .s12.vertical-tabs__panes, .row .color-form .s12.wrap-placeholder-fab, .color-form .row .s12.wrap-placeholder-fab, .row .color-palette .form-item:not(.form-item-scheme), .color-palette .row .form-item:not(.form-item-scheme) {
+    .row .col.s12, .row .vertical-tab-wrapper ul.vertical-tabs__menu, .vertical-tab-wrapper .row ul.vertical-tabs__menu, .row .vertical-tab-wrapper .vertical-tabs__panes, .vertical-tab-wrapper .row .vertical-tabs__panes, .row .color-form .s12.wrap-placeholder-fab, .color-form .row .s12.wrap-placeholder-fab, .row .color-palette .form-item:not(.form-item-scheme), .color-palette .row .form-item:not(.form-item-scheme) {
       width: 100%;
       margin-left: auto;
       left: auto;
@@ -9707,9 +9707,6 @@ span.theme-status-indicator {
 table .region-title {
   font-weight: normal; }
 
-table th:last-of-type:not(:only-of-type), table td:last-of-type:not(:only-of-type) {
-  text-align: right; }
-
 table td {
   font-weight: 200; }
 
@@ -10424,6 +10421,7 @@ tr .ajax-progress-throbber .throbber {
   .vertical-tab-wrapper ul.vertical-tabs__menu {
     position: relative;
     z-index: 2;
+    width: 100%;
     padding-right: 0 !important;
     margin-right: 0;
     border-right: 3px solid #9e9e9e; }
@@ -10458,6 +10456,13 @@ tr .ajax-progress-throbber .throbber {
       box-shadow: none; }
       .vertical-tab-wrapper .vertical-tabs__panes > details > summary {
         text-transform: uppercase; }
+
+@media only screen and (max-width: 600px) {
+  .vertical-tab-wrapper .vertical-tabs__panes {
+    border-left: 0;
+    margin-left: 0; }
+  .vertical-tab-wrapper ul.vertical-tabs__menu {
+    border-right: 0; } }
 
 /* @file
  * Color module override
