--- a/scss/base/overrides/_vertical-tabs.scss
+++ b/scss/base/overrides/_vertical-tabs.scss
@@ -4,8 +4,8 @@
  */
 
 .vertical-tab-wrapper {
-  height:auto;
-  > label {
+  height: auto;
+  >label {
     font-size: 20px;
     text-transform: uppercase;
     border-bottom: 1px solid map-get($grey, lighten-2);
@@ -13,29 +13,31 @@
     display: block;
   }
   ul.vertical-tabs__menu {
-    @extend .col, .m3;
+    @extend .col, .m3, .s12;
     position: relative;
-    z-index:2;
-    padding-right:0!important;
-    margin-right:0;    
-    border-right:3px solid map-get($grey,base);;
+    z-index: 2;
+    width: 100%;
+    padding-right: 0!important;
+    margin-right: 0;
+    border-right: 3px solid map-get($grey, base);
+    ;
     li.vertical-tabs__menu-item {
-     margin:0em 0 1.5em 0;
-     display:block;
-     &:focus {
-      outline:none;
-     }
+      margin: 0em 0 1.5em 0;
+      display: block;
+      &:focus {
+        outline: none;
+      }
       a {
         text-transform: uppercase;
         text-decoration: none;
         padding: .5em 1em;
         letter-spacing: 1px;
         display: block;
-        width:100%;
+        width: 100%;
         @extend .grey-text;
         span {
-          font-size:.75em;
-          display:block;
+          font-size: .75em;
+          display: block;
           text-transform: initial;
         }
         &:hover {
@@ -43,8 +45,8 @@
         }
       }
       &.is-selected {
-        border-right: 3px solid map-get($red,lighten-2);
-        margin-right:-3px;
+        border-right: 3px solid map-get($red, lighten-2);
+        margin-right: -3px;
         z-index: 2;
         @extend .grey, .lighten-4;
         a {
@@ -55,19 +57,29 @@
   }
   .vertical-tabs__panes {
     // add margin to go beyond border width 
-    margin-left:-3px!important;
-    padding-left:1em;
-    border-left:3px solid map-get($grey,base);
+    margin-left: -3px!important;
+    padding-left: 1em;
+    border-left: 3px solid map-get($grey, base);
     transition: max-height 0.66s ease-out;
-    max-height:100vh;
-    @extend .col, .m9;
-    > details {
-      border:none;
-      box-shadow:none;
-      > summary {
+    max-height: 100vh;
+    @extend .col, .m9, .s12;
+    >details {
+      border: none;
+      box-shadow: none;
+      >summary {
         @extend .red-text, .lighten-2;
         text-transform: uppercase;
       }
     }
+  }
+}
+
+@media #{$small-and-down} {
+  .vertical-tab-wrapper .vertical-tabs__panes {
+    border-left: 0;
+    margin-left:0;
+  }
+  .vertical-tab-wrapper ul.vertical-tabs__menu {
+    border-right: 0;
   }
 }
